--- a/package.json
+++ b/package.json
@@ -58,13 +58,132 @@
 				"name": "Databricks",
 				"type": "object",
 				"title": "Databricks",
-				"required": [
-					"databricks.connection.default.displayName",
-					"databricks.connection.default.apiRootUrl",
-					"databricks.connection.default.personalAccessToken",
-					"databricks.connection.default.localSyncFolder"
-				],
 				"properties": {
+					"databricks.workspaceConfiguration": {
+						"type": "object",
+						"description": "An object containting information about settings configured for the current VSCode workspace.",
+						"scope": "window",
+						"properties": {
+							"workspaceGuid": {
+								"type": "string",
+								"description": "A GUID uniquely identifying the VSCode workspace for Databricks specific configurations."
+							},
+							"lastActiveEnvironment": {
+								"type": "string",
+								"description": "The display name of the environment that was active the last time the extension was used."
+							}
+						}
+					},
+					"databricks.userWorkspaceConfigurations": {
+						"type": "array",
+						"description": "An object containting information about settings configured for the current VSCode workspace.",
+						"scope": "machine",
+						"items": {
+							"type": "object",
+							"properties": {
+								"workspaceGuid": {
+									"type": "string",
+									"description": "A GUID uniquely identifying the VSCode workspace for Databricks specific configurations. This is used to link workspace settings to global/user settings."
+								},
+								"connections": {
+									"type": "array",
+									"description": "An array of objects where each object represents a Databricks environment containing the same settings as defined for databricks.connection.default.* ",
+									"items": {
+										"type": "object",
+										"properties": {
+											"exportFormats": {
+												"type": "object",
+												"default": {
+													"Scala": ".scala",
+													"Python": ".py.ipynb",
+													"SQL": ".sql",
+													"R": ".r"
+												},
+												"description": "(Optional) The different file extension used when downloading notebooks from Databricks.",
+												"scope": "window",
+												"properties": {
+													"Scala": {
+														"type": "string",
+														"enum": [
+															".scala",
+															".scala.ipynb"
+														],
+														"description": "The file extension used when downloading Scala notebooks from Databricks."
+													},
+													"Python": {
+														"type": "string",
+														"enum": [
+															".py",
+															".py.ipynb"
+														],
+														"description": "The file extension used when downloading Python notebooks from Databricks."
+													},
+													"SQL": {
+														"type": "string",
+														"enum": [
+															".sql",
+															".sql.ipynb"
+														],
+														"description": "The file extension used when downloading SQL notebooks from Databricks."
+													},
+													"R": {
+														"type": "string",
+														"enum": [
+															".r",
+															".r.ipynb"
+														],
+														"description": "The file extension used when downloading R notebooks from Databricks."
+													}
+												}
+											},
+											"displayName": {
+												"type": "string",
+												"description": "Name shown in the environment list of the Databricks VSCode extension."
+											},
+											"apiRootUrl": {
+												"type": "string",
+												"default": "https://westeurope.azuredatabricks.net",
+												"description": "Root URL of the Databricks API. Azure: https://westeurope.azuredatabricks.net - AWS:   https://abc-12345-xaz.cloud.databricks.com"
+											},
+											"cloudProvider": {
+												"type": "string",
+												"enum": [
+													"Azure",
+													"AWS"
+												],
+												"description": "Cloud provider of your Databricks workspace."
+											},
+											"personalAccessToken": {
+												"type": "string",
+												"description": "The Personal Access Token (PAT) used to access the Databricks API."
+											},
+											"localSyncFolder": {
+												"type": "string",
+												"description": "A local path where files (notebooks) that are downloaded from Databricks should be stored. This folder can then be integrated in your GIT repository"
+											},
+											"pythonInterpreter": {
+												"type": "string",
+												"description": "Path to python.exe of the interpreter to use. Is displayed when setting the Python interpretor in VS Code"
+											},
+											"organizationId": {
+												"type": "string",
+												"description": "Azure only! The organization ID of the Databricks workspace. Can be found in the URL when connected in the browser."
+											},
+											"databricksConnectJars": {
+												"type": "string",
+												"description": "Path to the Databricks-Connect Pyspark JARs. Can be obtained using 'databricks-connect get-jar-dir'."
+											},
+											"port": {
+												"type": "number",
+												"default": 15001,
+												"description": "The port to use when connecting using Databricks-Connect. Default is 15001."
+											}
+										}
+									}
+								}
+							}
+						}
+					},
 					"databricks.connection.default.exportFormats": {
 						"type": "object",
 						"default": {
@@ -837,6 +956,7 @@
 		"file-saver": "^2.0.2",
 		"ftp": "^0.3.10",
 		"jsonc-parser": "^0.4.2",
+		"keytar": "^5.4.0",
 		"minimist": "^1.2.5",
 		"mkdirp": "^0.5.1",
 		"promise.prototype.finally": "^3.1.2",
